// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test Error Page should render #/error/screen-size correctly 1`] = `
<div>
  <div
    class="error-page"
  >
    <div
      class="text-center"
    >
      Please note that Beam Studio may not work optimally on your device. For an optimal experience, it should be a device with a screen width of at least 1024 pixels width.
    </div>
  </div>
</div>
`;

exports[`test Error Page should render unknown error correctly 1`] = `
<div>
  <div
    class="error-page"
  >
    <div
      class="text-center"
    >
      Unknown Error
    </div>
  </div>
</div>
`;
